[package]
name = "zsh-histdb-skim"
version = "0.8.4"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = { version = "0.10.4", default-features = false }
rusqlite = "0.27.0"
tuikit = "0.4.5"
chrono = "0.4.19"
enum-map = "2.1.0"
log = "0.4"
textwrap = "0.15"
humantime = "2.1.0"

[dev-dependencies]
regex = "*"
