[package]
name = "zsh-histdb-skim"
version = "0.9.6"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
skim = { version = "0.10.4", default-features = false }
rusqlite = "0.28.0"
tuikit = "0.5.0"
chrono = "0.4.38"
enum-map = "2.7.3"
log = "0.4"
textwrap = "0.15"
humantime = "2.1.0"
once_cell = "1.19.0"

[dev-dependencies]
regex = "*"
